
5.1.0 -> 5.2a0:
    - jbj: add :digest(foo) format. :fdigest(algo) for rpmrepo spew soon ...
    - jbj: generalize :utf8 to :iconv(UTF-8) iconv(3) conversions.
    - jbj: permit :foo(A,B,C) parameters to be passed to extension formats.
    - jbj: permit :base64 encoding to be applied to all tag data types.
    - jbj: apply multiple tag extension formats in L->R serial order.
    - jbj: use loops instead of inline for sigtags (adapted from rpm.org).
    - jbj: fix: is_selinux_enbled() > 0 is the correct test.
    - rpm.org: Avoid entirely unnecessary static temp string buffer.
    - rpm.org: Mask signals while moving rebuilt rpmdb into place.
    - rpm.org: Restore rpmdb selinux contexts to default after rebuild (#442149).
    - jbj: tests: coverage results at http://wraptastic.org/pub/jbj/rpm-lcov.
    - jbj: tests: add devtool-sanity (and other) tests.
    - jbj: rpmio: add additional tests.
    - jbj: add lcov targets throughout.
    - jbj: add (empty) SUBDIRS = # tests throughout.
    - jbj: add (empty) check-local: targets throughout.
    - jbj: rpmio: add lco/gcov coverage targets with rpm "make check".
    - jbj: rpmrepo: add :bncdata extension format for <location> display.
    - jbj: pass dataEnd to regionSwab() when unloading.
    - jbj: disable the headerLoad speedup's until headerUnload changes are done.
    - jbj: swab integer tag data in headerGet, not headerLoad (measured 6.9% rpm-V speedup ymmv).
    - jbj: compute tag store w subtract (measured 26.3% rpm -qa speedup ymmv).
    - jbj: initialize ts->PRCO lazily (measured 20.4% rpm -qa speedup ymmv).
    - glen: print error when makeTempPath fails due missing temp dir
    - jbj: add _fdopen to FDIO_t, expose fdbg(), make lzdio.c standalone.
    - jbj: expose XfdLink/XfdFree/XfdNew, nuke the FDIO_t vectors.
    - jbj: eliminate unused FDIO_t vectors. XfdLink/XfdFree/XfdNew need nuking.
    - jbj: create lzdio.c to carry lzma comprssion, possibly w dlopen().
    - jbj: merge OpenSUSE lzma.diff patch.