@@ -1,5 +1,6 @@
 
 5.1.0 -> 5.2a0:
+    - jbj: replace "diskstat" tag with :stat format extension instead.
     - jbj: add :digest(foo) format. :fdigest(algo) for rpmrepo spew soon ...
     - jbj: generalize :utf8 to :iconv(UTF-8) iconv(3) conversions.
     - jbj: permit :foo(A,B,C) parameters to be passed to extension formats.
